# web_scraper

./: .pdm-python  dynamic_scraper.py  jobs.csv  main.py  pyproject.toml  static_scraper.py
job_scraper.egg-info/: PKG-INFO  SOURCES.txt
